[2.17.4] BW-102 Inputs labels not showing correctly (#1775)
* BW-102 Inputs labels not showing correctly

* Version 2.17.4

--- a/client/components/WidgetV2/Booking/styles.scss
+++ b/client/components/WidgetV2/Booking/styles.scss
@@ -125,7 +125,6 @@
   -webkit-appearance: none;
   box-shadow: 1px 2px 3px 0 rgba(128, 128, 128, 0.15);
   transition: all 0.2s ease;
-  transform: translateZ(0);
   &:focus {
     transition: all 0.2s ease;
     border-color: var(--primaryColor);
